--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,15 @@
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
+@theme {
+  --breakpoint-*: initial;
+  --breakpoint-sm: 640px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 1024px;
+  --breakpoint-lg2: 1200px;
+  --breakpoint-xl: 1580px;
+  --breakpoint-2xl: 2000px;
+}
 
 @media (prefers-color-scheme: dark) {
   :root {
@@ -23,4 +32,8 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+button{
+  cursor: pointer;
 }
